--- a/Web/ClientApp/src/app/layout/navbar/navbar.component.html
+++ b/Web/ClientApp/src/app/layout/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="#">Contact Management</a>
+  <a class="navbar-brand" routerLink="/">Contact Management</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
     aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -7,13 +7,13 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" routerLink="/">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">User</a>
+        <a class="nav-link" routerLink="/">User</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Organisation</a>
+        <a class="nav-link" routerLink="/">Organisation</a>
       </li>
     </ul>
     <ul class="navbar-nav ml-auto">
